--- a/index.html
+++ b/index.html
@@ -1,30 +1,3 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Ankita Arun Pise</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="AnkitaArunPise.pdf">Resume</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Ankita Arun Pise!</h1>
-				<p>I am a developer, designer and an enthusiast for all things wonderful! <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:ankita.pise@gmail.com">email</a></li>
-        		<li><a href="https://github.com/aapise">github.com/aapise</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: front
+---
